Inactive slider drawing artifacts #38383

Closed
opened 2014-01-28 13:10:01 +01:00 by Andrey Izrantsev · 10 comments

System Information
Ubuntu 12.04, GeForce GTX 580

Blender Version
Broken: 2.69.10 544b7e6

Short description of error
Slider is drawn with some artifacts when layout is inactive.

Exact steps for others to reproduce the error
Here is a example panel code: https://gist.github.com/bdancer/0336b3cf7e149cf360bf
Here is an image - look at the second slider.

inactive_slider_draw_issue.png

**System Information** Ubuntu 12.04, GeForce GTX 580 **Blender Version** Broken: 2.69.10 544b7e6 **Short description of error** Slider is drawn with some artifacts when layout is inactive. **Exact steps for others to reproduce the error** Here is a example panel code: https://gist.github.com/bdancer/0336b3cf7e149cf360bf Here is an image - look at the second slider. ![inactive_slider_draw_issue.png](https://archive.blender.org/developer/F75531/inactive_slider_draw_issue.png)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @AndreiIzrantcev

Added subscriber: @AndreiIzrantcev

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Can you see if your graphics card driver is set to force anti-aliasing?

I can only redo this bug if I override application settings in the graphics cards configuration.

Blender mostly works if you do this but there are some areas of blender which dont work quite right when anti-aliasing is forced on.

Can you see if your graphics card driver is set to force anti-aliasing? I can only redo this bug if I **override application settings** in the graphics cards configuration. Blender mostly works if you do this but there are some areas of blender which dont work quite right when anti-aliasing is forced on.

AA is set to "Use Application Settings".
Driver version: 319.37

I'm also having this issue on Windows 7 under VirtualBox.

AA is set to "Use Application Settings". Driver version: 319.37 I'm also having this issue on Windows 7 under VirtualBox.

This issue was referenced by blender/blender-addons-contrib@abf18033f3

This issue was referenced by blender/blender-addons-contrib@abf18033f39c09f983154d88cef1a53bce8dd75a

This issue was referenced by abf18033f3

This issue was referenced by abf18033f39c09f983154d88cef1a53bce8dd75a

Correction, I can redo when AA is off too, so this is a bug.

Correction, I can redo when AA is off too, so this is a bug.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit abf18033f3.

Closed by commit abf18033f3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38383
No description provided.