Fix T38383: glitch drawing inactive slider